// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutcomeSummaryBar render inverted badges 1`] = `
<DocumentFragment>
  <div
    aria-label="42 Passed, 13 Failed, 7 Incomplete"
    class="outcome-summary-bar"
    data-automation-id="outcome-summary-bar"
    role="img"
  >
    <div
      style="flex-grow: 42;"
    >
      <span
        class="pass summary-bar-left-edge"
      >
        <mock-checkiconinverted />
        42
      </span>
    </div>
    <div
      style="flex-grow: 13;"
    >
      <span
        class="fail"
      >
        <mock-crossiconinverted />
        13
      </span>
    </div>
    <div
      style="flex-grow: 7;"
    >
      <span
        class="incomplete summary-bar-right-edge"
      >
        <mock-circleicon />
        7
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OutcomeSummaryBar show by count 1`] = `
<DocumentFragment>
  <div
    aria-label="42 Passed, 13 Failed, 7 Incomplete"
    class="outcome-summary-bar"
    data-automation-id="outcome-summary-bar"
    role="img"
  >
    <div
      style="flex-grow: 42;"
    >
      <span
        class="pass summary-bar-left-edge"
      >
        <mock-checkicon />
        42
      </span>
    </div>
    <div
      style="flex-grow: 13;"
    >
      <span
        class="fail"
      >
        <mock-crossicon />
        13
      </span>
    </div>
    <div
      style="flex-grow: 7;"
    >
      <span
        class="incomplete summary-bar-right-edge"
      >
        <mock-circleicon />
        7
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OutcomeSummaryBar show by percentage 1`] = `
<DocumentFragment>
  <div
    aria-label="42% Passed, 13% Failed, 7% Incomplete"
    class="outcome-summary-bar"
    data-automation-id="outcome-summary-bar"
    role="img"
  >
    <div
      style="flex-grow: 42;"
    >
      <span
        class="pass summary-bar-left-edge"
      >
        <mock-checkicon />
        42%
      </span>
    </div>
    <div
      style="flex-grow: 13;"
    >
      <span
        class="fail"
      >
        <mock-crossicon />
        13%
      </span>
    </div>
    <div
      style="flex-grow: 7;"
    >
      <span
        class="incomplete summary-bar-right-edge"
      >
        <mock-circleicon />
        7%
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OutcomeSummaryBar show with text label 1`] = `
<DocumentFragment>
  <div
    aria-label="42 Passed, 13 Failed, 7 Incomplete"
    class="outcome-summary-bar"
    data-automation-id="outcome-summary-bar"
    role="img"
  >
    <div
      style="flex-grow: 42;"
    >
      <span
        class="pass summary-bar-left-edge"
      >
        <mock-checkicon />
        42
        <span
          class="label"
        >
           Passed
        </span>
      </span>
    </div>
    <div
      style="flex-grow: 13;"
    >
      <span
        class="fail"
      >
        <mock-crossicon />
        13
        <span
          class="label"
        >
           Failed
        </span>
      </span>
    </div>
    <div
      style="flex-grow: 7;"
    >
      <span
        class="incomplete summary-bar-right-edge"
      >
        <mock-circleicon />
        7
        <span
          class="label"
        >
           Incomplete
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
